--- a/client/html/postForm.html
+++ b/client/html/postForm.html
@@ -22,7 +22,7 @@
 
       <h4 class="jokeForm-heading">Number of Questions</h4>
       <label for="qnNumber" class="sr-only">Number of Questions</label>
-      <input type="text" name="qnNumber" id="qnNumber" class="form-control" placeholder="Number of Questions" maxlength="40">
+      <input type="text" name="qnNumber" id="qnNumber" class="form-control" placeholder="Number of Questions cannot exceed 20" maxlength="40">
 
       <h4 class="jokeForm-heading">chosenThread</h4>
       <select id="chosenThread" name="chosenThread">
