--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -9,6 +9,7 @@
 
 		{{#EasySearch.IfInputEmpty index=index }}
 			<div class="padded examples black">Search by Thread</div>
+			<div class="padded examples black">Sorted from Newest to Oldest</div>
 		{{else}}
 			{{#if resultsCount}}
 				<div class="padded count-results black">{{resultsCount}} results found.</div>
