--- a/client/html/questionpage.html
+++ b/client/html/questionpage.html
@@ -22,7 +22,7 @@
 {{#each pins}}
   <div class="postheading">
 
-    <p>{{qnDesc}}</p>
+    <p>{{qnDesc}} - {{date}}</p>
 
   </div>
 
@@ -49,7 +49,9 @@
 </div>
 <div class="commentformat">
   <h3>Comments</h3>
+
 </div>
+
 
 
 {{#each questions}}
@@ -67,6 +69,7 @@
   </div>
 
   <div class="heading">
+    <p class="regular comment-desc">Created on: {{date}}</p>
     <p>{{qnDesc}}</p>
     <h6>{{op}}</h6>
   </div>
@@ -76,7 +79,7 @@
 {{else}}
 
 <div class="commentformat">
-  <p>no comments</p>
+  <p>no comments to display</p>
 </div>
 
 {{/each}}
