testing new commit

--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -35,7 +35,7 @@
       <p>{{postDesc}}</p>
       <br>
       <a class="link-green" href="/postpage/{{_id}}" id="redirect">Go To Post</a>
-      <h3> </h3>
+      <h3> </h3> testing 
       <br>
     </div>
 
