--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <div class="navbar" id="myTopnav">
-          <img src="book.png" class="icon-book" id="book">
+          <img src="book.png" class="icon" >
           <a class="company-logo" href="/jokes">NUS SHARE</a>
           {{#if currentUser}}
           <a class="link-blue" href="/jokes" id="jokes-link"><i class="fa fa-home"></i></a>
