--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -38,7 +38,7 @@
     </div>
     <br>
     <div class="postheading">
-      <iframe src="{{PDFlink}}" width="640" height="480"></iframe>
+      <iframe src="{{PDFlink}}" width="1280" height="480"></iframe>
     </div>
 
   {{/with}}
@@ -69,6 +69,7 @@
 </div>
 <div class="row">
     <p class="regular comment-desc">Created on: {{date}}</p>
+    <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
     <p class="regular comment-desc">{{commentDesc}}</p>
 </div>
 
