unsub and css for sub and unsub

--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -35,6 +35,7 @@
       <p>Number of votes: no of upvoted - no of downvoted </p>
       <p>Number of Questions: {{qnNumber}}</p>
       <br>
+    <!--<a href="{{PDFlink}}">{{PDFlink}}</a>-->
     </div>
     <br>
     <div class="postheading">
