--- a/client/html/threadsearch.html
+++ b/client/html/threadsearch.html
@@ -68,7 +68,7 @@
   			</div>
   				<br>
 				<div>
-					<span id="subThread">Subscribe</span>
+					<button id="subThread" class="btn btn-sml btn-primary">Subscribe</button>
 				</div>
 		</div>
 		{{/if}}
