--- a/client/html/postForm.html
+++ b/client/html/postForm.html
@@ -12,8 +12,8 @@
       <br>
 
       <br>
-      <h4 class="jokeForm-heading">Attach a File from Google Docs</h4>
-      <input type="text" name="PDFlink" id="PDFlink" class="form-control" placeholder="Paste the sharing link of a File from Google Docs   e.g. PDF, Image, Word">
+      <h4 class="jokeForm-heading">Attach a File from Google Drive</h4>
+      <input type="text" name="PDFlink" id="PDFlink" class="form-control" placeholder="Paste the sharing link of a File from Google Drive only PDF, Image">
       <br>
       <h4 class="jokeForm-heading">Description</h4>
       <textarea id="postDesc" name="postDesc" placeholder="This is how students understand the purpose of the post" style="height:200px"></textarea>
