--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -9,6 +9,15 @@
       <p class="joke-desc">{{threadDesc}}</p>
       <a class="joke-desc" href="/profiles/{{userId}}" id="profile_direct">Created By: {{author}}</a>
       <p class="joke-desc">Created On: {{date}}</p>
+      <!--<span id="subThread">Subscribe</span>
+      <br>
+      <span id="unsubThread">Unsubscribe</span>-->
+      <button id="subThread" class="btn btn-sml btn-primary">Subscribe</button>
+      <br>
+      <br>
+      <button id="unsubThread" class="btn btn-sml btn-primary">Unsubscribe</button>
+      <br>
+      <br>
     </div>
 
     <!--<span class="count black block">{{threadDesc}}</span>
