--- a/client/html/postpage.html
+++ b/client/html/postpage.html
@@ -27,6 +27,7 @@
         <a class="joke-title" href="/postpage/{{_id}}" id="redirect">{{postTitle}}</a>
       <p class="regular joke-desc">{{chosenThreadName}} <br> Created on: {{date}}</p>
       <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
+      <p class="ranking {{userId}}" id="{{userId}}"></p>
 </div>
 </div>
     <div class="postheading" id="postsrc">
@@ -46,7 +47,37 @@
 <br>
 <div class="commentheading">
   <br>
-  {{> commentForm}}
+  {{#if currentUser}}
+  <!-- Joke Form-->
+  <div class="container">
+    <form class="comment-form">
+
+      <h2 class="jokeForm-heading">New Comment</h2>
+
+      <h4 class="jokeForm-heading">Description</h4>
+      <textarea id="commentDesc" name="commentDesc" placeholder="New Comment" style="height:200px"></textarea>
+
+      <button class="btn btn-lg btn-success btn-block" type="submit">Submit Comment</button><!-- upload both post and file-->
+    </form>
+  </div>
+
+
+  <!-- End Joke Form-->
+
+  {{else}}
+
+  <!-- Joke Form-->
+  <div id="jokeForm-wrap">
+    <center>
+      <form class="joke-post">
+        <h2 class="from-signin-heading">Login to Post a Comment</h2>
+        <a href="/" class="btn btn-md btn-primary" id="login-redir">Login</a>
+      </form>
+    </center>
+  </div>
+  <!-- End Joke Form-->
+
+  {{/if}}
   <br>
 </div>
 
@@ -71,6 +102,7 @@
 <div class="row">
     <p class="regular comment-desc">Created on: {{date}}</p>
     <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
+    <p class="ranking {{userId}}" id="{{userId}}"></p>
     <p class="regular comment-desc">{{commentDesc}}</p>
 </div>
 
@@ -95,4 +127,47 @@
   </div>
 </div>
 
+<script>
+
+function userRank() {
+  //var userRank = Meteor.users.findOne({_id: postcreator_id}).profile.rank;
+  //return userRank;
+  var ranked_users = document.getElementsByClassName("ranking");
+  var k;
+  for(k = 0; k< ranked_users.length; k++){
+    var rkuser = ranked_users[k].id;
+    //console.log(rkuser);
+    var userrank = Meteor.users.findOne({_id: rkuser}).profile.rank;
+    //console.log(userrank);
+    var class_id = "ranking " + rkuser;
+    var class_id_occur = document.getElementsByClassName(class_id);
+    var j;
+    for(j = 0; j< class_id_occur.length; j++){
+      document.getElementsByClassName(class_id)[j].innerHTML = userrank;
+    }
+    //console.log(class_id);
+  }
+}
+var int=setInterval('check()', 500);
+function check(){
+  if (chkObject('div')==true)
+  {
+     //window.alert('true');
+     int=window.clearInterval(int);
+     userRank();
+  }
+  else
+  {
+    userRank();
+  }
+}
+
+function chkObject(elemId)
+{
+   return (document.getElementsByClassName("ranking"))? true : false;
+}
+
+
+
+</script>
 </template>
