rank tagging and update in qn page

--- a/client/html/questionpage.html
+++ b/client/html/questionpage.html
@@ -39,7 +39,37 @@
 
   {{/with}}
 
-  {{> qnpagecomment}}
+  {{#if currentUser}}
+  <!-- Joke Form-->
+  <div class="container">
+    <form class="qnpagecomment-form">
+
+      <h2 class="jokeForm-heading">New Comment</h2>
+
+      <h4 class="jokeForm-heading">Description</h4>
+      <textarea id="qnDesc" name="qnDesc" placeholder="New Comment" style="height:200px"></textarea>
+
+      <button class="btn btn-lg btn-success btn-block" type="submit">Submit Comment</button><!-- upload both post and file-->
+    </form>
+  </div>
+
+
+  <!-- End Joke Form-->
+
+  {{else}}
+
+  <!-- Joke Form-->
+  <div id="jokeForm-wrap">
+    <center>
+      <form class="joke-post">
+        <h2 class="from-signin-heading">Login to Post a Comment</h2>
+        <a href="/" class="btn btn-md btn-primary" id="login-redir">Login</a>
+      </form>
+    </center>
+  </div>
+  <!-- End Joke Form-->
+
+  {{/if}}
 
 
 
@@ -70,6 +100,8 @@
 
   <div class="heading">
     <p class="regular comment-desc">Created on: {{date}}</p>
+    <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
+    <p class="ranking {{userId}}" id="{{userId}}"></p>
     <p>{{qnDesc}}</p>
     <h6>{{op}}</h6>
   </div>
@@ -93,4 +125,47 @@
     <p class="regular joke-title"></p>
   </div>
 </div>
+<script>
+
+function userRank() {
+  //var userRank = Meteor.users.findOne({_id: postcreator_id}).profile.rank;
+  //return userRank;
+  var ranked_users = document.getElementsByClassName("ranking");
+  var k;
+  for(k = 0; k< ranked_users.length; k++){
+    var rkuser = ranked_users[k].id;
+    //console.log(rkuser);
+    var userrank = Meteor.users.findOne({_id: rkuser}).profile.rank;
+    //console.log(userrank);
+    var class_id = "ranking " + rkuser;
+    var class_id_occur = document.getElementsByClassName(class_id);
+    var j;
+    for(j = 0; j< class_id_occur.length; j++){
+      document.getElementsByClassName(class_id)[j].innerHTML = userrank;
+    }
+    //console.log(class_id);
+  }
+}
+var int=setInterval('check()', 500);
+function check(){
+  if (chkObject('div')==true)
+  {
+     //window.alert('true');
+     int=window.clearInterval(int);
+     userRank();
+  }
+  else
+  {
+    userRank();
+  }
+}
+
+function chkObject(elemId)
+{
+   return (document.getElementsByClassName("ranking"))? true : false;
+}
+
+
+
+</script>
 </template>
