added profile editing and profiles redirection

--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -17,11 +17,14 @@
       {{/with}}
 
       <h1 class="username">{{username}}</h1>
+      <h3>{{realname}}</h3>
+      <h3>{{bio}}</h3>
       <h3>{{email}}</h3>
       <h3>Points: {{points}}</h3>
       <h3>Rank: {{rank}}</h3>
       <!--<h3 id="toggle">Toggle Public Comments Status: {{status}}</h3>-->
       <button id="toggle" class="btn btn-sml btn-primary">Toggle Public Comments Status: {{status}}</button>
+      <a class="btn btn-sml btn-primary" href="/edit">Edit Profile</a>
 
         <!--<div class="" id="">
           <img src="laugh.png" class="profile-smiley" id="laugh">
