added change username function but change dp function still not working

--- a/client/html/edit.html
+++ b/client/html/edit.html
@@ -4,6 +4,9 @@
 
     <!-- <p class="meta" id="testing">press here</p> -->
 
+    <label for="username" class="sr_only">Change Username</label>
+    <input type="text" name="username" id="username" class="form-control" placeholder="New username">
+
     <label for="realname" class="sr_only">Add Real Name</label>
     <input type="text" name="realname" id="realname" class="form-control" placeholder="Include Your Real Name">
 
