--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -5,6 +5,13 @@
     <center>
       {{#with UserImages}}<!--if this user has a user image then render image -->
         <img src="{{image}}" class="profile-img">
+        <form class="edit-picture" enctype="multipart/form-data">
+          <label for="editImage">Edit Profile Image</label>
+          <span id="filename"></span>
+          <input type="file" name="editImage" id="editImage" class="black profileImage">
+          <br>
+          <button type="submit" value="Upload a Photo" id="profile-btn" class="btn btn-sml btn-primary">Upload Photo</button>
+        </form>
       {{else}}
         <img src="github.svg" class="profile-img">
         <form class="edit-profile" enctype="multipart/form-data" >
@@ -67,6 +74,16 @@
 <script type="text/javascript">
   $(function(){
     $("#profileImage:file").change(function(){
+      var fileName = $(this).val();
+      $("span").text(fileName);
+      $("label").hide();
+    });
+  });
+</script>
+
+<script type="text/javascript">
+  $(function(){
+    $("#editImage:file").change(function(){
       var fileName = $(this).val();
       $("span").text(fileName);
       $("label").hide();
