--- a/client/html/home.html
+++ b/client/html/home.html
@@ -81,7 +81,7 @@
     </div>-->
     <p class="regular joke-desc">{{chosenThreadName}} <br> Created on: {{date}}</p>
     <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
-    <button type="button" onclick="userRank()"></button>
+    <!--<button type="button" onclick="userRank()"></button>-->
     <p class="ranking {{userId}}" id="{{userId}}"></p>
   </div>
 
