--- a/client/html/profiles.html
+++ b/client/html/profiles.html
@@ -1,7 +1,5 @@
 <template name="profiles">
 
-  <p>yo whasaap</p>
-
   <br>
 
   {{#if currentUser}}
@@ -15,7 +13,9 @@
       {{/with}}
 
       <h1 class="username">{{username}}</h1>
-      <h3>{{email}}</h3>
+      <!--<h3>{{email}}</h3>-->
+      <h3>Points: {{points}}</h3>
+      <h3>Rank: {{rank}}</h3>
         <!--<div class="" id="">
           <img src="laugh.png" class="profile-smiley" id="laugh">
           <img src="frown.png" class="profile-smiley" id="frown">
