--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -13,7 +13,7 @@
           <button type="submit" value="Upload a Photo" id="profile-btn" class="btn btn-sml btn-primary">Upload Photo</button>
         </form>
       {{else}}
-        <img src="github.svg" class="profile-img">
+        <img src="/github.svg" class="profile-img">
         <form class="edit-profile" enctype="multipart/form-data" >
           <label for="profileImage">choose profile Image</label>
           <span id="filename"></span>
