--- a/client/html/home.html
+++ b/client/html/home.html
@@ -149,7 +149,13 @@ function userRank() {
       }else if(userrank == "New Kid"){
         icon_img = "New_Kid.png";
       }else if(userrank == "Handy Man"){
-        icon_img = "book.png";
+        icon_img = "Handy_Man.png";
+      }else if(userrank == "Answer Prince"){
+        icon_img = "Prince.png";
+      }else if(userrank == "Lobang King"){
+        icon_img = "king.jpg";
+      }else if(userrank == "NUS God"){
+        icon_img = "god.png";
       }
       // icon.setAttribute('src', icon_img);
       // icon.setAttribute('alt', 'Flowers in Chania');
