--- a/client/html/questionpage.html
+++ b/client/html/questionpage.html
@@ -101,6 +101,7 @@
   <div class="heading">
     <p class="regular comment-desc">Created on: {{date}}</p>
     <a class="link-blue" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
+    <img class="img {{userId}} book-logo" src="" alt="Flowers in Chania" width="18" height="18" style="float:left">
     <p class="ranking {{userId}}" id="{{userId}}"></p>
     <p>{{qnDesc}}</p>
     <h6>{{op}}</h6>
@@ -127,25 +128,46 @@
 </div>
 <script>
 
-function userRank() {
-  //var userRank = Meteor.users.findOne({_id: postcreator_id}).profile.rank;
-  //return userRank;
-  var ranked_users = document.getElementsByClassName("ranking");
-  var k;
-  for(k = 0; k< ranked_users.length; k++){
-    var rkuser = ranked_users[k].id;
-    //console.log(rkuser);
-    var userrank = Meteor.users.findOne({_id: rkuser}).profile.rank;
-    //console.log(userrank);
-    var class_id = "ranking " + rkuser;
-    var class_id_occur = document.getElementsByClassName(class_id);
-    var j;
-    for(j = 0; j< class_id_occur.length; j++){
-      document.getElementsByClassName(class_id)[j].innerHTML = userrank;
+  function userRank() {
+    //var userRank = Meteor.users.findOne({_id: postcreator_id}).profile.rank;
+    //return userRank;
+    var ranked_users = document.getElementsByClassName("ranking");
+    var k;
+    for(k = 0; k< ranked_users.length; k++){
+      var rkuser = ranked_users[k].id;
+      //console.log(rkuser);
+      var userrank = Meteor.users.findOne({_id: rkuser}).profile.rank;
+      //console.log(userrank);
+      var class_id = "ranking " + rkuser;
+      var img_id = "img " + rkuser;
+      var class_id_occur = document.getElementsByClassName(class_id);
+      var j;
+      for(j = 0; j< class_id_occur.length; j++){
+        var icon = document.createElement('img');
+        var icon_img;
+        if(userrank == "Leech"){
+          icon_img = "/Leech.png";
+        }else if(userrank == "New Kid"){
+          icon_img = "/New_Kid.png";
+        }else if(userrank == "Handy Man"){
+          icon_img = "/Handy_Man.png";
+        }else if(userrank == "Answer Prince"){
+          icon_img = "/Prince.png";
+        }else if(userrank == "Lobang King"){
+          icon_img = "/king.jpg";
+        }else if(userrank == "NUS God"){
+          icon_img = "/god.png";
+        }
+        document.getElementsByClassName(class_id)[j].innerHTML = userrank;
+        document.getElementsByClassName(img_id)[j].setAttribute('src', icon_img);
+
+
+        //document.getElementsByClassName(class_id)[j].appendChild(icon);
+
+      }
+      //console.log(class_id);
     }
-    //console.log(class_id);
   }
-}
 var int=setInterval('check()', 500);
 function check(){
   if (chkObject('div')==true)
