--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -9,6 +9,7 @@
       <p class="joke-desc">{{threadDesc}}</p>
       <a class="joke-desc" href="/profiles/{{userId}}" id="profile_direct">Created By: {{author}}</a>
       <p class="joke-desc">Created On: {{date}}</p>
+      <img class="img {{userId}} book-logo" src="" alt="Flowers in Chania" width="18" height="18" style="float:left">
       <p class="ranking {{userId}}" id="{{userId}}"></p>
       <!--<span id="subThread">Subscribe</span>
       <br>
@@ -83,6 +84,7 @@
       </div>-->
       <p class="regular joke-desc">{{chosenThreadName}} <br> Created on: {{date}}</p>
       <a class="regular joke-desc" href="/profiles/{{userId}}" id="profile_direct">Author: {{author}}</a>
+      <img class="img {{userId}} book-logo" src="" alt="Flowers in Chania" width="18" height="18" style="float:left">
       <p class="ranking {{userId}}" id="{{userId}}"></p>
     </div>
 
@@ -108,25 +110,46 @@
 
   <script>
 
-  function userRank() {
-    //var userRank = Meteor.users.findOne({_id: postcreator_id}).profile.rank;
-    //return userRank;
-    var ranked_users = document.getElementsByClassName("ranking");
-    var k;
-    for(k = 0; k< ranked_users.length; k++){
-      var rkuser = ranked_users[k].id;
-      //console.log(rkuser);
-      var userrank = Meteor.users.findOne({_id: rkuser}).profile.rank;
-      //console.log(userrank);
-      var class_id = "ranking " + rkuser;
-      var class_id_occur = document.getElementsByClassName(class_id);
-      var j;
-      for(j = 0; j< class_id_occur.length; j++){
-        document.getElementsByClassName(class_id)[j].innerHTML = userrank;
+    function userRank() {
+      //var userRank = Meteor.users.findOne({_id: postcreator_id}).profile.rank;
+      //return userRank;
+      var ranked_users = document.getElementsByClassName("ranking");
+      var k;
+      for(k = 0; k< ranked_users.length; k++){
+        var rkuser = ranked_users[k].id;
+        //console.log(rkuser);
+        var userrank = Meteor.users.findOne({_id: rkuser}).profile.rank;
+        //console.log(userrank);
+        var class_id = "ranking " + rkuser;
+        var img_id = "img " + rkuser;
+        var class_id_occur = document.getElementsByClassName(class_id);
+        var j;
+        for(j = 0; j< class_id_occur.length; j++){
+          var icon = document.createElement('img');
+          var icon_img;
+          if(userrank == "Leech"){
+            icon_img = "/Leech.png";
+          }else if(userrank == "New Kid"){
+            icon_img = "/New_Kid.png";
+          }else if(userrank == "Handy Man"){
+            icon_img = "/Handy_Man.png";
+          }else if(userrank == "Answer Prince"){
+            icon_img = "/Prince.png";
+          }else if(userrank == "Lobang King"){
+            icon_img = "/king.jpg";
+          }else if(userrank == "NUS God"){
+            icon_img = "/god.png";
+          }
+          document.getElementsByClassName(class_id)[j].innerHTML = userrank;
+          document.getElementsByClassName(img_id)[j].setAttribute('src', icon_img);
+
+
+          //document.getElementsByClassName(class_id)[j].appendChild(icon);
+
+        }
+        //console.log(class_id);
       }
-      //console.log(class_id);
     }
-  }
   var int=setInterval('check()', 500);
   function check(){
     if (chkObject('div')==true)
