added emergency button

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -49,7 +49,7 @@
       <p class="regular joke-head-font">Votes</p>
     </div>
     <div class="threadbar">
-      <p class="regular joke-head-font">Topic</p>
+      <p class="regular joke-head-font" id="rankreset">Topic</p>
     </div>
   </div>
 
