--- a/client/html/threadpage.html
+++ b/client/html/threadpage.html
@@ -35,7 +35,7 @@
     <p class="regular joke-head-font">Votes</p>
   </div>
   <div class="threadbar">
-    <p class="regular joke-head-font">Topic</p>
+    <p class="regular joke-head-font rankreset">Topic</p>
   </div>
 </div>
 <!--  {{#each posts}}
