--- a/client/html/topnavbar.html
+++ b/client/html/topnavbar.html
@@ -3,8 +3,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <div class="navbar" id="myTopnav">
-          
-          <img src="book.png" alt="Flowers in Chania" width="50" height="50" style="float:left" class="book-logo">
+
+          <img src="/book.png" alt="Flowers in Chania" width="50" height="50" style="float:left" class="book-logo">
           <a class="company-logo" href="/jokes">NUS SHARE</a>
           {{#if currentUser}}
           <a class="link-blue" href="/jokes" id="jokes-link"><i class="fa fa-home"></i></a>
